# Voice_Agent_week_project

./: .gitignore  README.md  codex.md  pyproject.toml
configs/: classes.md
datasets/public_baseline/: README.md  annotation.schema.json  manifest.json
datasets/public_baseline/annotations/: bus_london_pulls_in.json  bus_waiting_multiple_arrivals.json  kiosk_like_reverse_vending_machine.json  signal_pedestrian_new_zealand_vertical.json  signal_pedestrian_washington_dc.json  signal_yellow_flicker_vertical.json  ticket_machine_defective_screen.json
scripts/: check_environment.py  detect_video.py  evaluate_public_baseline.py  prepare_annotations.py  run_public_baseline.py  stream_video_client.py
src/vision_agent/: __init__.py  event_manager.py  events.py  io.py  narration.py  object_types.py  ocr.py  pipeline.py  router.py  server.py  signals.py  types.py  vlm.py
tests/: test_analysis_flow.py  test_analyzers.py  test_bus_analyzer.py  test_custom_object_classes.py  test_detect_video_cli.py  test_device.py  test_evaluate_public_baseline.py  test_event_manager.py  test_events.py  test_generic_analyzer.py  test_kiosk_analyzer.py  test_narration.py  test_ocr.py  test_pipeline.py  test_prepare_annotations.py  test_router.py  test_run_public_baseline.py  test_server.py  test_session.py  test_signals.py  test_text_object_analyzer.py  test_vlm.py
visual_assistant_test_video_pack_builder/: LICENSES.md  README_KO.md  codex_next_task.md  download_and_build.py  sources.json
visual_assistant_test_video_pack_builder/annotations/: annotation_template.json
(+11 files in other folders)
