[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-agent-vision"
version = "0.1.0"
description = "YOLO26-based real-time perception pipeline for a proactive visual assistant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.10,<5",
  "ultralytics>=8.4.0,<9",
]

[project.optional-dependencies]
ocr = [
  "onnxruntime>=1.20,<2",
  "rapidocr>=3.9.2,<4",
]
vlm = [
  "accelerate>=1,<2",
  "pillow>=10,<13",
  "transformers>=5,<6",
]
server = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
]
dev = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pytest>=8.2,<9",
  "ruff>=0.9,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
